# dtcc-sim

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  pyproject.toml  setup-server.sh
demos/: README.md  dataset_air_quality_field.py  dataset_urban_heat.py  urban_heat_cooling.py  urban_heat_heatwave.py
demos/output/: README.md
dtcc_sim/: __init__.py  datasets.py  fenics.py  smooth_reconstruction.py  urban_heat.py
mcp_server/: __init__.py  __main__.py  client.py  config.py  server.py
sandbox/: build_flat_mesh_gbg.py  build_mesh_gbg.py  build_volume_mesh_gbg.py  build_volume_mesh_gbg_new.py  fenics.py  solve_advdiff.py  solve_helmholtz.py  solve_poisson.py  solve_poisson_2d.py  solve_poisson_3d.py  solve_wave.py
sandbox/output/: README.md
tests/: test_import.py
