[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtcc-sim"
version = "0.1.0"
description = "DTCC Sim"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Anders Logg", email = "logg@chalmers.se" },
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx", "sphinx-immaterial"]

[project.urls]
Homepage = "https://github.com/dtcc-platform/dtcc-sim"
Source = "https://github.com/dtcc-platform/dtcc-sim"
Documentation = "https://platform.dtcc.chalmers.se/"

[tool.setuptools.packages.find]
where = ["."]
include = ["dtcc_sim*"]

[tool.pytest.ini_options]
pythonpath = ["."]
